Tweaked CSS to fix overlapped content due to fixed-top

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,6 +9,7 @@ main {
     font-weight: 400;
     background-color: #161616;
     height: 100vh;
+    padding-top:4rem;
 }
 
 img {
